fix btns on mobile landing

--- a/src/Root/Landing/components/Services/styles.scss
+++ b/src/Root/Landing/components/Services/styles.scss
@@ -27,6 +27,7 @@
   @include mobile{
     height: $size-big;
     line-height: $size-big;
+    margin-top: $indent-big;
   }
 }
 
